# test_task_2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.h  institution.cpp  institution.h  main.cpp  test.cpp  test.h
.github/workflows/: docker-build.yml
